--- a/sac.html
+++ b/sac.html
@@ -1,15 +1,32 @@
 <html>
 	<head>
+		<title>Calculadora de Financiamentos SAC</title>
 		<script src="sac.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css"  media="screen"
+					href="sac.css" />
 	</head>
 	<body>
-		<label for="interest">Annual Interest Rate %: </label>
-		<input type="text" id="interest" size="2" maxlength="3"/><br/>
-		<label for="value">Value: R$ </label>
-		<input type="text" id="value"/><br/>
-		<label for="period">Months: </label>
-		<input type="text" id="period"/><br/>
-		<input type="button" value="Calculate" onclick="calculate()" />
+		<div class="label">
+			<label for="interest">Taxa de Juros Anual: </label>
+			<input type="text" id="interest" size="1" maxlength="5"/> %
+		</div>
+
+		<div class="label">
+			<label for="value">Montante: </label>
+			R$ <input type="text" id="value" size="5"/>
+		</div>
+
+		<div class="label">
+			<label for="period">Meses: </label>
+			<input type="text" id="period" size="2"/>
+		</div>
+
+		<div class="label">
+			<label for="taxes">Taxas: </label>
+			R$ <input type="text" id="taxes" size="5"/>
+		</div>
+
+		<input type="button" value="Calcular" onclick="calculate()" />
 		<div id="result"></div>
 	</body>
 </html>
